<resources>
    <string name="app_name">Catalog</string>
    <string name="empty_tv_catalog">Looks like you\'ve watched nothing so far! Click on the Search-Button to add the first movie or series to your tv catalog :-)</string>
    <string name="empty_book_catalog">Looks like you\'ve read no book so far! Click on the Search-Button to add the first book to your book catalog :-)</string>
    <string name="empty_games_catalog">Looks like you\'ve played no game so far! Click on the Search-Button to add the first game to your game catalog :-)</string>
    <string name="name">Name</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release Date</string>
    <string name="watch_date">Watch Date</string>
    <string name="filter_by">Filter by</string>
    <string name="games">Games</string>
    <string name="tv">TV</string>
    <string name="books">Books</string>
    <string name="add_to_catalog">ADD TO CATALOG</string>
    <string name="date">Date:</string>
    <string name="comment">Comment</string>
    <string name="to_search">To Search</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="continue_without_account">Continue Without Account</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="delete_confirmation">Delete this item from catalog?</string>
</resources>
